Bug 320565 - akonadi nepoumuk crash when playing youtube video / donwloading via downthemall addon in firefox-nightly
Summary: akonadi nepoumuk crash when playing youtube video / donwloading via downthema...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Nepomuk Feeder Agents (other bugs)
Version First Reported In: 4.10
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 07:24 UTC by Simon Andric
Modified: 2013-06-05 15:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Andric 2013-06-01 07:24:10 UTC
Application: akonadi_nepomuk_feeder (4.10)
KDE Platform Version: 4.10.60
Qt Version: 4.8.5
Operating System: Linux 3.9.0-3-generic x86_64
Distribution: Ubuntu Saucy Salamander (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

akonadi nepoumuk crash when playing youtube video / donwloading via downthemall addon in firefox-nightly - during watching video and downoading same video this crash happens...

nice day

Simon :)

The crash can be reproduced sometimes.

-- Backtrace:
Application: Akonadi Nepomuk Feeder (akonadi_nepomuk_feeder), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  0x00007f6e28bd96e2 in Nepomuk2::MainModel::Private::init (this=0x15ceea0, forced=true) at /build/buildd/project-neon-nepomuk-core-2+git20130531+r1417/libnepomukcore/resource/nepomukmainmodel.cpp:112
#7  0x00007f6e28bd87e9 in Nepomuk2::MainModel::init (this=0x15e9820) at /build/buildd/project-neon-nepomuk-core-2+git20130531+r1417/libnepomukcore/resource/nepomukmainmodel.cpp:159
#8  0x00007f6e28bd5250 in Nepomuk2::ResourceManager::init (this=0x15ee980) at /build/buildd/project-neon-nepomuk-core-2+git20130531+r1417/libnepomukcore/resource/resourcemanager.cpp:300
#9  0x000000000040c8a8 in Akonadi::NepomukFeederAgent::NepomukFeederAgent (this=0x15c1b10, id=...) at /build/buildd/project-neon-kdepim-runtime-2+git20130531+r8104/agents/nepomukfeeder/nepomukfeederagent.cpp:110
#10 0x0000000000411757 in Akonadi::AgentBase::init<Akonadi::NepomukFeederAgent> (argc=3, argv=0x7fff678df558) at /opt/project-neon/include/akonadi/agentbase.h:399
#11 0x000000000040f674 in main (argc=3, argv=0x7fff678df558) at /build/buildd/project-neon-kdepim-runtime-2+git20130531+r8104/agents/nepomukfeeder/nepomukfeederagent.cpp:563

Reported using DrKonqi
Comment 1 Vishesh Handa 2013-06-05 15:12:53 UTC
Git commit 58d91983b250898eed2d4c1119ad15ad2b8f88f5 by Vishesh Handa, on behalf of Michael Olbrich.
Committed on 01/06/2013 at 10:28.
Pushed by vhanda into branch 'master'.

NepomukMainModel: don't crash if the backend is missing

'backend' may be NULL if creating a backend fails.

REVIEW: 110762

M  +1    -1    libnepomukcore/resource/nepomukmainmodel.cpp

http://commits.kde.org/nepomuk-core/58d91983b250898eed2d4c1119ad15ad2b8f88f5