NepomukMainModel: don't crash if the backend is missing

'backend' may be NULL if creating a backend fails.

REVIEW: 110762
BUG: 320565